apps/unifi/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: unifi
subsets:
  - addresses:
      - ip: 192.168.0.1
    ports:
      - port: 443
        protocol: TCP
