apps/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP
