apps/unifi/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unifi.home.bstjohn.net`)
      kind: Rule
      services:
        - name: unifi
          port: 443
          scheme: https
          serversTransport: unifi-transport
  tls:
    secretName: wildcard-home-tls
